--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Meta -->
     <title>Croxswap Exchange| Swap & Bridge</title>
     <meta
